Small refactoring to remove observer from download item during pause

Currently when pausing a download, we remove the download controller
from observing the download item in DownloadManagerService. This CL moves
the logic to DownloadController itself when onDownloadUpdated()
is called and the download is paused.
This should have no impact on the existing flow since calling
download->Pause() will trigger a onDownloadUpdated() call. However, this
helps the servicification path as when downloadManager is created,
it calls DownloadUIController::OnDownloadCreated() for all the downloads.
And the DownloadUIController will call DownloadController::OnDownloadStarted()
to add the DownloadController as an observer to the already paused download.

BUG=900280

Change-Id: I58dd004b74e738cbe49db9b103357df2d0f52d3c
Reviewed-on: https://chromium-review.googlesource.com/c/1311795
Reviewed-by: Shakti Sahu <shaktisahu@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604531}