chrome/browser/android/download/download_manager_service.cc
@@ -468,10 +468,8 @@ void DownloadManagerService::CancelDownloadInternal(
 void DownloadManagerService::PauseDownloadInternal(
     const std::string& download_guid, bool is_off_the_record) {
   download::DownloadItem* item = GetDownload(download_guid, is_off_the_record);
-  if (item) {
+  if (item)
     item->Pause();
-    item->RemoveObserver(DownloadControllerBase::Get());
-  }
 }
 
 void DownloadManagerService::RemoveDownloadInternal(
